# agent-quotas

./: .gitignore  AGENTS.md  Cargo.toml  README.md  hook-script-example.sh  setup.sh
admin/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
admin/src/: App.tsx  api.ts  hooks.ts  index.css  types.ts
admin/src/pages/: Login.tsx  Stats.tsx  Users.tsx
hook/: antigravity-hook.sh  claude-quota-hook.sh  codex-hook.sh
src/: admin.rs  api.rs  auth.rs  dashboard.rs  db.rs  main.rs  models.rs
